# bsimvis

./: .gitignore  LICENSE  README.md  app.py  bsim_index.py  bsimvis_config.toml  build_diff.py  build_index.py  delete_prefix.py  docker-compose.yml  kvrocks.conf  main.py  pyproject.toml  requirements.txt  setup_redis.py  setup_redis_indexes.py  test_gpr.py
bsimvis/: worker.py
bsimvis/app/: __init__.py
bsimvis/app/lua/: build_similarity.lua  clear_similarity.lua  find_candidates.lua  search_similarity.lua
bsimvis/app/routes/: features.py  file.py  function_code.py  function_diff.py  function_feature.py  function_similarity.py  index.py  jobs.py  search.py  search_collection.py  search_feature.py  search_file.py  search_function.py  search_similarity.py  search_similarity_plot.py  similarity.py  tags.py
bsimvis/app/services/: feature_service.py  function_service.py  index_service.py  job_service.py  lua_manager.py  processing_service.py  redis_client.py  similarity_service.py  tag_service.py  timer_service.py
bsimvis/app/static/: index.html
bsimvis/app/static/css/: style.css
bsimvis/app/static/diff/: index.html
bsimvis/app/static/feature/: index.html
bsimvis/app/static/function/: index.html
bsimvis/cli/: __init__.py  bsimvis_batch.py  bsimvis_bench.py  bsimvis_cache.py  bsimvis_diff.py  bsimvis_features.py  bsimvis_index.py  bsimvis_job.py  bsimvis_setup.py  bsimvis_sim.py  bsimvis_upload.py  bsimvis_worker.py  main.py
bsimvis/database/: setup_redis.py
doc/: api_documentation.md  kvrocks_database_structure.md  similarity_filtering.md
(+1 files in other folders)
