[project]
name = "bsimvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "bokeh>=3.9.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "pyghidra>=3.0.2",
    "redis>=7.3.0",
    "tqdm>=4.67.3",
]
